# sparc

./: .gitignore  LICENSE  README.md  analyze_artifacts.py  analyze_detection_issues.py  debug_artifact_structure.py  debug_improved_detection.py  debug_template_application.py  debug_template_parameters.py  debug_template_subtraction.py  pyproject.toml  results_analysis.md  test_artifact_indices_refactor.py  test_fixed_method.py  test_improved_method.py
examples/: analysis.py  bulk_comparison.py  decomposition.py  eraasr.py  eraasr_template_subtraction.py  ica.py  linear_interpolation.py  load_results_analysis.py  matlab_replication.py  swec_ethz_template_subtraction.py  template_subtraction.py  template_subtraction_with_known_artifacts.py
examples/eraasr/: ica.py  ica_vs_pca_comparison.py  low_rank_tv.py  pca.py
examples/simulated/: README_inner_product_analysis.md  ica_simulated_data.py  inner_product_analysis.py  pca.py  (+2 more)
scripts/: add_artifacts_to_swec.py  add_artifacts_to_swec_limited_pulses.py  concatenate_hours.py  concatenate_simulated_data_into_trials.py  convert_data.py  downsample_eraasr.py  downsample_simulated_data.py  eraasr_convert.py  generate_artifacts_to_swec.py  generate_swec.py  synthetic_artifact.py  utils.py  verify_pickle_in_concatenated.py  wait_for_expert_and_sweep.sh
sparc/: __init__.py  method_tester.py
sparc-nn/: attention_model.py  data_utils.py  eval.py  hyperparameter_sweep.py  loss.py  model.py  multiscale_attention_model.py  supervised_artifact_loss.py  supervised_neural_loss.py  train.py  train_expert.py  uncertainty_loss.py
(+91 files in other folders)
