# SPARC/pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sparc*"]

[project]
name = "sparc"
version = "0.0.1"
description = "Stimulation artifact Purging and Analysis in Real-time Circuits"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Han Bui", email = "ha@sparkenv.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.3.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "h5py>=3.0.0",
    "mne>=1.0.0",
    "tqdm>=4.60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
]
real-time = [
    "pyaudio>=0.2.11",
    "sounddevice>=0.4.0",
]

[tool.black]
line-length = 88
target-version = ['py38']